# Rukari

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml  rukari.pyi  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  clippy.yml  fmt.yml  freeze-for-pr.yml  lint.yml  reformat.yml  resync-piped.yml  rustfmt.yml  type-check.yml  update-licence.yml  upgrade-dev-deps.yml  upgrade-locks.yml  verify-locks.yml  verify-types.yml
dev-requirements/: constraints.in  constraints.txt  docs.in  freeze_deps.in  freeze_deps.txt  lint.txt  nox.txt  other-type-checking.txt  packaging.in  reformat.in  reformat.txt  type-check.in  type-checking.in  type-checking.txt  type_check.in  type_check.txt
src/: bot.rs  event_manager.rs  lib.rs  shard.rs
