[package]
name = "rukari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[lib]
name = "rukari"
crate-type = ["cdylib"]

[dependencies]
pyo3-log = "0.9.0"
pythonize = "0.16.0"
twilight-gateway = "0.14.1"
twilight-http = "0.15.4"
twilight-model = "0.14.5"
serde = "1.0.217"
serde_json = "1.0.140"

[dependencies.futures-util]
default-features = false
features = ["std"]
version = "0.3"

[dependencies.log]
features = ["kv_unstable_std"]
version = "0.4"

[dependencies.pyo3]
features = ["extension-module"]
version = "0.16.6"

[dependencies.pyo3-anyio]
version = "0.3.0"

[dependencies.tokio]
features = ["rt", "sync"]  # , "rt-multi-thread"
version = "1.42.0"
