[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "rukari"
version = "0.1.0"
requires-python = ">=3.9.0,<3.12"
license = {file = "LICENSE"}
authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
dependencies = ["anyio~=3.6", "hikari~=2.0.0.dev109"]

[project.urls]
Homepage = "https://github.com/FasterSpeeding/Rukari"
Repository = "https://github.com/FasterSpeeding/Rukari"
Documentation = "https://github.com/FasterSpeeding/Rukari/blob/master/README.md"

[tool.black]
line-length     = 120
target-version  = ["py39"]
include         = ".*pyi?$"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
# some good strict settings
python_version = 3.9
strict = true
warn_unreachable = true

# more narrow type ignores
show_error_codes = true

[tool.piped]
codespell_ignore = "crate"
default_sessions = ["reformat", "verify-markup", "spell-check", "type-check", "verify-types"]
hide = [
    "build",
    "generate-docs",
    "publish",
    "slot-check",
    "test",
    "test-publish",
    "test-coverage",
]
project_name = "rukari"
top_level_targets = ["./noxfile.py", "./rukari.pyi"]

[tool.piped.github_actions.freeze_for_pr]
[tool.piped.github_actions.lint]
[tool.piped.github_actions.reformat]
[tool.piped.github_actions.resync_piped]
[tool.piped.github_actions.type_check]
[tool.piped.github_actions.update_licence]
[tool.piped.github_actions.upgrade_locks]
[tool.piped.github_actions.verify_locks]
[tool.piped.github_actions.verify_types]

[tool.pyright]
include = ["noxfile.py", "rukari.pyi"]

pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingModuleSource = "error"
reportMissingTypeStubs = "error"
